# memory_compiler

./: .gitignore  AGENTS.md  ALL_IN_ONE_START_HERE.md  CHANGELOG.md  README.md  START_HERE.md  agent_state.json  pyproject.toml
.dmc/: config.yaml  index.sqlite3
.dmc/generated_schemas/: agent_state.schema.json  artifact_card.schema.json  distill_result.schema.json  episode_card.schema.json  eval_case.schema.json  evidence_ref.schema.json  failure_mode.schema.json  knowledge_ref.schema.json  (+17 more)
docs/: ACCEPTANCE_PROTOCOL.md  AGENT_STATE_PROTOCOL.md  PROJECT_INDEX.md  TOOL_POLICY.md
examples/: sample_action.yaml  sample_event.yaml  sample_task.yaml
modules/: G01_INTEGRATION_V0.md  G02_DELIVERY_V0.md  M00_BOOTSTRAP.md  M01_SCHEMAS.md  M02_STORE.md  M03_PLAN_GRAPH.md  M04_RENDERER.md  M05_RETRIEVER.md  M06_PRECHECK.md  M07_RECORDER.md  M08_DISTILLER_EVALS.md  M09_MCP_SERVER.md  M10_ADAPTERS.md  M11_CLI.md  R01_DURABLE_CONTRACTS.md  R02_STATE_AND_BRIEFING.md  R03_MEMORY_QUALITY.md  R04_RETRIEVAL_AND_ADAPTERS.md  R05_DOCS_AND_CI.md
prompts/: DELIVERY_AGENT_CONTRACT.md  MODULE_AGENT_CONTRACT.md  REVIEWER_AGENT_CONTRACT.md
scripts/: bootstrap_commands.sh
templates/: acceptance_report.template.md  agent_state.initial.json  agent_state.schema.json  eval_case.schema.json  handoff_report.template.md  plan_graph.schema.json  pyproject.toml.template  trace_event.schema.json
tests/: test_adapters.py  test_cli.py  test_distiller.py  test_mcp_server.py  test_plan_graph.py  test_precheck.py  test_recorder.py  test_renderer.py  test_retriever.py  test_schemas.py  test_store.py
(+58 files in other folders)
